tests/ui/impl-trait/in-trait/dont-project-to-rpitit-with-no-value.stderr
error[E0046]: not all trait items implemented, missing: `foo`
  --> $DIR/dont-project-to-rpitit-with-no-value.rs:6:1
   |
LL |     fn foo(&self) -> impl Sized;
   |     ---------------------------- `foo` from trait
...
LL | impl MyTrait for i32 {
   | ^^^^^^^^^^^^^^^^^^^^ missing `foo` in implementation

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0046`.
